[package]
name = "rusty-poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
actix-session = { version = "0.9", features = ["cookie-session"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.37.0", features = ["full"]}
actix-cors = "0.7"
rand = "0.8.5"
poker = "0.5"
